--- a/src/app/components/pages/profile/profile.component.html
+++ b/src/app/components/pages/profile/profile.component.html
@@ -1,4 +1,3 @@
-<!-- user-profile.component.html -->
 <div class="user-profile">
     <div class="profile-header">
         <h1>Perfil de Usuario</h1>
@@ -6,35 +5,36 @@
     <div class="profile-body">
         <div class="user-info">
             <div class="profile-picture">
-                <!-- <img class="img-fluid" [src]="'data:image/jpeg;base64,' + currentUser.image" alt="Destination Image"> -->
                 <img class="img-fluid" src="../../../../assets/profile.png" alt="Profile image">
             </div>
             <div class="user-details">
-                <h2>Nombre de Usuario: {{currentUser.name}}</h2>
-                <p>Correo electrónico: {{currentUser.email}}</p>
-                <button class="btn btn-primary mb-2 book-button" (click)="openEditProfileDialog()">Editar perfil</button>
+                <h2>{{currentUser.name}}</h2>
+                <p>{{currentUser.email}}</p>
+                <button class="btn btn-primary book-button" (click)="openEditProfileDialog()">Editar perfil</button>
             </div>
         </div>
         <div class="booking-history">
             <h2>Historial de Reservas</h2>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Fecha de Reserva</th>
-                        <th>Nombre del Destino</th>
-                        <th>País del Destino</th>
-                        <th>Precio Total</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let paidReservation of paidReservations">
-                        <td>{{ paidReservation.reservationDate | date }}</td>
-                        <td>{{ paidDestination.name }}</td>
-                        <td>{{ paidDestination.country.name }}</td>
-                        <td>{{ paidReservation.price }}</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Fecha de Reserva</th>
+                            <th>Nombre del Destino</th>
+                            <th>País del Destino</th>
+                            <th>Precio Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let paidReservation of paidReservations">
+                            <td>{{ paidReservation.reservationDate | date }}</td>
+                            <td>{{ paidDestination.name }}</td>
+                            <td>{{ paidDestination.country.name }}</td>
+                            <td>{{ paidReservation.price }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
