--- a/src/app/components/shared/navbar/navbar.component.scss
+++ b/src/app/components/shared/navbar/navbar.component.scss
@@ -1,96 +1,121 @@
 @import '../../../../assets/variables.scss';
 
-nav {
-    background-color: $darkblue;
-    color: $lightblue;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 30px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    font-family: 'Roboto', sans-serif;
-}
+.custom-navbar {
+  background-color: $darkblue;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  font-family: 'Roboto', sans-serif;
 
-.navbar-brand {
+  .navbar-brand {
     font-size: 1.8em;
     font-weight: bold;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-}
-
-.brand-text {
-    margin-left: 10px;
-}
-
-.navbar-nav {
-    display: flex;
-    list-style-type: none;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-}
-
-.navbar-nav li {
-    margin-right: 20px;
-}
-
-.navbar-nav:last-child li {
-    margin-right: 0;
-}
-
-.navbar-nav a {
     color: $lightblue;
     text-decoration: none;
-    transition: color 0.3s;
+    display: flex;
+    align-items: center;
+
+    img {
+      width: 60px;
+      margin-right: 10px;
+      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+      transition: transform 0.3s ease-in-out;
+
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
+
+    &:hover {
+      color: lighten($lightblue, 20%);
+    }
+  }
+
+  .nav-link {
+    color: $lightblue;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    transition: color 0.3s ease;
     font-size: 1.3em;
-}
 
-.navbar-nav a:hover {
-    color: lighten($lightblue, 20%);
-}
+    &:hover {
+      color: lighten($lightblue, 20%);
+    }
 
-.navbar-nav img {
-    width: 60px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s ease-in-out;
-}
+    &.active {
+      font-weight: bold;
+    }
+  }
 
-.navbar-nav img:hover {
-    transform: scale(1.05);
-}
+  .navbar-toggler {
+    border-color: $lightblue;
+    color: $lightblue;
+    padding: 0.25rem 0.5rem;
 
-.navbar-nav button {
-    background-color: $blue;
-    border: none;
-    padding: 10px 25px;
-    color: #fff;
-    transition: background-color 0.3s;
-    font-size: 1.1em;
-}
+    &:hover, &:focus {
+      color: lighten($lightblue, 20%);
+      outline: none;
+      box-shadow: none;
+    }
+  }
 
-.navbar-nav button:hover {
-    background-color: $darkblue;
-}
+  .navbar-toggler-icon {
+    background-image: none;
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    content: "";
+    background: no-repeat center center;
+    background-size: 100% 100%;
 
-@media only screen and (max-width: 768px) {
-    nav {
-        flex-direction: column;
-        align-items: flex-start;
+    &::before {
+      content: "\2630"; // Unicode character for "trigram for heaven" (☰)
+      font-size: 1.5rem;
+      line-height: 1;
+      color: $lightblue;
+    }
+  }
+
+  .navbar-mobile-actions {
+    display: flex;
+    align-items: center;
+  }
+
+  .mobile-cart-icon {
+    display: none;
+  }
+
+  @media (max-width: 991px) {
+    .navbar-mobile-actions {
+      .mobile-cart-icon {
+        display: flex;
+        align-items: center;
+        margin-right: 15px;
+        color: $lightblue;
+      }
+    }
+
+    .navbar-collapse {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background-color: $darkblue;
+      padding: 1rem;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      z-index: 1000;
     }
 
     .navbar-nav {
-        flex-direction: column;
-        align-items: flex-start;
+      flex-direction: column;
     }
 
-    .navbar-nav li {
-        margin-right: 0;
-        margin-bottom: 10px;
+    .nav-item {
+      margin-bottom: 0.5rem;
     }
 
-    .navbar-brand {
-        margin-bottom: 20px;
+    .nav-link {
+      padding: 0.5rem 0;
     }
+  }
 }
+
